# powerdns-dyndns-agent

./: Cargo.toml  README.md
agent/: Cargo.toml
agent/src/: args.rs  main.rs
api/: Cargo.toml
api/src/: lib.rs
server/: Cargo.toml  sample-hosts.json
server/src/: args.rs  main.rs  pdns_api.rs
