[package]
name = "agent"
version = "0.1.0"
edition = "2021"

[dependencies]
api = { version = "0.1.0", path = "../api" }
clap = { version = "4.5.20", features = ["derive"] }
local-ip-address = "0.6.3"
p256 = { version = "0.13.2", features = ["jwk", "serde"] }
rand = "0.8.5"
reqwest = { version = "0.12.9" }
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
