[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.92"
api = { version = "0.1.0", path = "../api" }
axum = "0.7.7"
clap = { version = "4.5.20", features = ["derive"] }
reqwest = "0.12.9"
tokio = { version = "1.41.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
